<resources>

    //STRINGS REGISTRO
    <string name="app_name">Apoyo Alzheimer</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="Aceptar">Aceptar</string>

    //STRINGS LOGIN
    <string name="cuenta">¿No tienes una cuenta?</string>
    <string name="registro_link">REGÍSTRATE</string>
    <string name="olvido">¿Olvidaste tu contraseña?</string>
    <string name="olvido_link">RECUPÉRALA</string>
    <string name="fb">Facebook</string>
    <string name="google">Google</string>

    //STRINGS REGISTRO Y LOGIN
    <string name="bien">BIENVENIDO</string>

    //STRINGS MENU PRINCIPAL
    <string name="ej">EJERCICIOS</string>
    <string name="rec">RECUERDOS</string>
    <string name="cons">CONSEJOS</string>
    <string name="ubi">UBICACIÓN</string>
    <string name="iti">ITINERARIO</string>

    //STRINGS AJUSTES MENU
    <string name="son">SONIDO</string>
    <string name="mus">MÚSICA</string>

    //STRINGS JUEGOS
    <string name="sec">SECUENCIA</string>
    <string name="op">OPERACIONES</string>
    <string name="col">COLORES</string>
    <string name="ex">EXAMEN</string>


    //STRING JUEGO COLORES
    <string name="ins3">El objetivo de este ejercicio es decir lo más rápido que puedas el color de
        la palabra sin equivocarse para trabajar ambos hemisferios del cerebro.</string>

    //STRING JUEGO EXÁMEN
    <string name="ins4">Este es un test que para que su eficacia aumente se deberia realizarse ya
        sea 2 veces por semana o 2 veces por mes, si su participante respondió correcto palomita si es
        incorrecto cruz.</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_ubicacion">Map</string>
    <string name="title_activity_mi_ubicacion">Map</string>
    <string name="title_activity_consejos_user">ConsejosUserActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab_layout">TabLayoutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
