<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/b"
    android:orientation="vertical"
    android:paddingBottom="50dp"
    android:paddingHorizontal="20dp"
    tools:context=".inicio.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/galyon_bold"
                android:text="@string/email"
                android:textColor="@color/a"
                android:textSize="25dp"
                android:textStyle="bold">
            </TextView>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/a"
                android:fontFamily="@font/galyon_bold"
                android:textSize="25dp"
                android:textColor="@color/a"
                android:inputType="textEmailAddress">

            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/galyon_bold"
                android:text="@string/contraseña"
                android:textColor="@color/a"
                android:textSize="25dp"
                android:textStyle="bold">
            </TextView>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/a"
                android:textColor="@color/a"
                android:fontFamily="@font/galyon_bold"
                android:inputType="textPassword"
                android:textSize="25dp">

            </EditText>


            <Button
                android:onClick="iniciosesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/boton_redondo"
                android:fontFamily="@font/galyon_bold"
                android:text="@string/Aceptar"
                android:textColor="@color/b"
                android:textSize="25dp"
                android:textStyle="bold">

            </Button>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TableRow>

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/galyon_bold"
                        android:text="@string/cuenta"
                        android:layout_marginBottom="35dp"
                        android:textColor="@color/a"
                        android:textSize="16sp">

                    </TextView>

                    <TextView
                        android:id="@+id/registro"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/galyon_bold"
                        android:text="@string/registro_link"
                        android:textColor="@color/a"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:onClick="registrar">
                    </TextView>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/galyon_bold"
                        android:text="@string/olvido"
                        android:layout_marginBottom="35dp"
                        android:textColor="@color/a"
                        android:textSize="16dp">

                    </TextView>

                    <TextView
                        android:id="@+id/olvido"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/galyon_bold"
                        android:text="@string/olvido_link"
                        android:textColor="@color/a"
                        android:textSize="18dp"
                        android:onClick="olvidarContra"
                        android:layout_marginLeft="8dp"
                        android:layout_gravity="center">
                    </TextView>
                </TableRow>
            </TableLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </RelativeLayout>

            <Button
                android:id="@+id/google_boton"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/boton_redondo"
                android:fontFamily="@font/galyon_bold"
                android:text="@string/google"
                android:textColor="@color/b"
                android:textSize="25dp"
                android:textStyle="bold">
            </Button>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>