<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:background="@color/b">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone">
            </ProgressBar>
            0

            <ImageView
                android:layout_width="400dp"
                android:layout_height="280dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/logo">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textStyle="bold"
                android:textColor="@color/a"
                android:layout_marginLeft="50dp"
                android:textSize="25dp"
                android:fontFamily="@font/galyon_bold">
            </TextView>

            <EditText
                android:id="@+id/txtName"
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/a"
                android:fontFamily="@font/galyon_bold"
                android:textSize="20dp"
                android:inputType="textPersonName">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/a"
                android:layout_marginLeft="50dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:fontFamily="@font/galyon_bold">
            </TextView>

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/a"
                android:fontFamily="@font/galyon_bold"
                android:textSize="20dp"
                android:inputType="textEmailAddress">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contraseña"
                android:textColor="@color/a"
                android:layout_marginLeft="50dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:fontFamily="@font/galyon_bold">
            </TextView>

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/a"
                android:fontFamily="@font/galyon_bold"
                android:textSize="20dp"
                android:inputType="textPassword">
            </EditText>

            <Button

                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/boton_redondo"
                android:fontFamily="@font/galyon_bold"
                android:textStyle="bold"
                android:text="@string/Aceptar"
                android:textColor="@color/b"
                android:textSize="20dp">

            </Button>

        </LinearLayout>

    </ScrollView>

</LinearLayout>